require-non-root/non-root-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: require-non-root-deployment
  labels:
    monokle.io/demo: kustomize-happy-cms
spec:
  replicas: 5
  selector:
    matchLabels:
      app: happy-cms
  template:
    metadata:
      labels:
        app: happy-cms
    spec:
      containers:
        - name: happy-cms
          image: happy-cms:latest
          ports:
            - name: http-web
              containerPort: 8080
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            runAsGroup: 10001
